--- a/style.css
+++ b/style.css
@@ -12,4 +12,28 @@ h2{
 h3{
     font-size: 28px;
 }
-@media all and (min-width: )
+@media all and (min-width:320px) and (max-width: 480px){
+    h2{
+        font-size: 32px;
+    }
+    h3{
+        font-size: 19px;
+    }
+}
+@media all and (min-width: 769px) and (max-width: 1024px){
+    
+    h2{
+        font-size: 48px;
+    }
+    h3{
+        font-size: 24px;
+    }
+}
+@media all and (min-width: 1021px){
+    h2{
+        font-size: 56px;
+    }
+    h3{
+        font-size: 28px;
+    }
+}
