--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 .container{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction:column;
+    align-items: center;
     height: 100vh;
     background: url(images/apple1.jpg) no-repeat;
     background-size: cover;
@@ -36,4 +40,17 @@ h3{
     h3{
         font-size: 28px;
     }
+}
+header{
+   font-family: Arial, Helvetica, sans-serif;
+}
+nav{
+    display: flex;
+    justify-content: center;
+    gap:40px;
+    align-items: center;
+}
+a{
+    text-decoration: none;
+    color:black;
 }
