--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0;
+}
 .container{
     display: flex;
     justify-content: flex-end;
@@ -39,56 +42,5 @@ h3{
     }
     h3{
         font-size: 28px;
-    }
-}
-header{
-   font-family: Arial, Helvetica, sans-serif;
-}
-nav{
-    display: flex;
-    justify-content: center;
-    gap:40px;
-    align-items: center;
-}
-a{
-    text-decoration: none;
-    color:black;
-}
-.encabezado{
-    font-size: 96px;
-}
-.encabezado2{
-    font-size: 96px;
-}
-@media all and (min-width:1021px){
-    .encabezado{
-        font-size: 96px;
-    }
-    .encabezado2{
-        font-size: 24px;
-    }
-}
-@media all and (min-width: 1025px) and (max-width: 1200px){
-    .encabezado{
-        font-size: 64px;
-    }
-    .encabezado2{
-        font-size: 24px;
-    }
-}
-@media all and (min-width:769px) and (max-width: 1024px){
-    .encabezado{
-        font-size: 48px;
-    }
-    .encabezado2{
-        font-size: 21px;
-    }
-}
-@media all and (min-width:320px) and (max-width: 480px){
-    .encabezado{
-        font-size: 48px;
-    }
-    .encabezado2{
-        font-size: 17px;
     }
 }
