--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 body{
     margin: 0;
 }
+header {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    align-items: center;
+    background-color: #444445;
+    padding: 20px;
+    font-size: 90%;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
 .container{
     display: flex;
     justify-content: flex-end;
